--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -1,10 +1,10 @@
 
 .card-container {
-  width: 1000px;
   display: flex;
   flex-wrap: wrap;
   /* justify-content: space-between; */
   justify-content: space-evenly;
-  padding-left: 3%;
+  padding-left: 5%;
+  padding-right: 3%;
   padding-bottom: 6%;
 }
